--- a/public/styles/nav.scss
+++ b/public/styles/nav.scss
@@ -219,6 +219,51 @@ header {
     background-size: cover;
     height: 80vh;
     width: 100%;
+
+    h1.display-3 {
+      color: #fff;
+      font-weight: bold;
+      font-size: 3rem;
+
+    }
+  }
+  @media screen and (max-width: 600px) {
+    .intro-bg {
+      background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5))
+      ,url("https://www.thoughtco.com/thmb/G7ML8YAMHYLgUS_dGMNjJsdXpME=/3864x2577/filters:fill(auto,1)/web-designer-developing-responsive-website-layout-946928244-5bcf7fe246e0fb00513cc772.jpg")
+      no-repeat center center fixed;
+      background-size: cover;
+      height: 80vh;
+      width: 100%;
+    }
+    h1.display-3 {
+      color: #fff;
+      font-weight: bold;
+      font-size: 1.4rem!important;
+
+    }
+    a.btn {
+      border-radius: 5px;
+      padding: 0.2rem 0.8rem!important;
+      font-size: 0.9rem!important;
+      font-weight: 500;
+      transition: ease-in-out 0.3s;
+      cursor: pointer;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+    .btn-primary {
+      background-color: darkblue;
+      border-color: darkblue;
+      color: white;
+      &:hover {
+        background-color: transparent;
+        border-color: darkblue;
+        color: darkblue;
+      }
+    }
   }
 }
 
