--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -62,6 +62,7 @@
   font-size: 1.2rem;
   font-weight: 500;
   text-transform: uppercase;
+  margin: 1rem 0 !important;
   letter-spacing: 0.2rem;
   color: #f1f1f1;
   background-color: #000;
@@ -94,6 +95,7 @@
   font-size: 1.2rem;
   font-weight: 500;
   text-transform: uppercase;
+  margin: 1rem 0 !important;
   letter-spacing: 0.2rem;
   color: #f1f1f1;
 }
