--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -61,6 +61,7 @@
             font-size: 1.2rem;
             font-weight: 500;
             text-transform: uppercase;
+            margin: 1rem 0!important;
             letter-spacing: 0.2rem;
             color: #f1f1f1;
             background-color: #000;
@@ -95,6 +96,7 @@
             font-size: 1.2rem;
             font-weight: 500;
             text-transform: uppercase;
+            margin: 1rem 0!important;
             letter-spacing: 0.2rem;
             color: #f1f1f1;
           }
