update to about page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,8 +15,8 @@
 </header>
 <main class="container my-5">
     <div class="row justify-content-center align-items-center">
-        <div class="col-lg-12 mb-6">
-            <h1 class="display-3 mb-3 fw-light">About Our <span class="fw-bold">Agency</span></h1>
+        <div class="col-lg-12 mb-5">
+            <h1 class="display-3 mb-3 fw-light">About the <span class="fw-bold">Developer</span></h1>
             <p class="text-muted">
                 Building and managing custom websites for the best user and client experience. Building all websites and apps with the standards
                 of Html, Css, & JavaScript for web pages. This is the common practice of all websites and platforms. The backend uses JavaScript,
@@ -24,10 +24,20 @@
                 keeping your website healthy and going.
             </p>
         </div>
-        <div class="col-lg-12 mt-3 mb-4">
-            <h3 class="display-5">The staff & sponsors</h3>
+        <div class="col-lg-12 mb-5">
+            <h2 class="mb-3">Making A Difference</h2>
+            <p class="text-muted">
+                With me, you get the benefits as if yu were going to an agency. I design websites on Figma first, develop the front and back end, deploy and host it.
+                I get projects done in a timely manner, producing the same quality if not better, and help coach clients on free marketing.
+            </p>
         </div>
-        <%- include('partials/about/team-cards') -%>
+        <div class="col-lg-12 mb-5">
+            <h2 class="mb-3">From Ideas To Design</h2>
+            <p class="text-muted">
+                Making your ideas come to life, and most often times I exceed the expectations with my own brainstorming ideas. As the pages get built, a lot of ideas come
+                into play that could improve the experience of the client and their intended audience.
+            </p>
+        </div>
     </div>
 </main>
 <%- include('layouts/footer') -%>
