--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -7,7 +7,7 @@
     <%- include('layouts/navBar') -%>
 </header>
 <main class="container my-5 py-5">
-    <h1 class="display-1 text-center mb-2">Our Previous Work</h1>
+    <h1 class="display-1 text-center mb-2">My Previous Work</h1>
     <p class="lead text-center mb-5">Built with JavaScript, html, Scss, Express, and Node</p>
     <div class="row text-center">
         <div class="col-lg-3 hover mb-3">
@@ -49,29 +49,6 @@
             <a href="#!">
                 <img src="https://placehold.co/600x400" class="img-project-fluid" alt="example">
             </a>
-        </div>
-        <div class="col-lg-3 hover mb-3">
-            <a href="#!">
-                <img src="https://placehold.co/600x400" class="img-project-fluid" alt="example">
-            </a>
-        </div>
-        <div class="col-lg-3 hover mb-3">
-            <a href="#!">
-                <img src="https://placehold.co/600x400" class="img-project-fluid" alt="example">
-            </a>
-        </div>
-        <div class="col-lg-3 hover mb-3">
-            <a href="#!">
-                <img src="https://placehold.co/600x400" class="img-project-fluid" alt="example">
-            </a>
-        </div>
-        <div class="col-lg-3 hover mb-3">
-            <a href="#!">
-                <img src="https://placehold.co/600x400" class="img-project-fluid" alt="example">
-            </a>
-        </div>
-        <div class="col-lg-12 mt-5 text-center">
-            <p class="h4">And many more happy clients . . .</p>
         </div>
     </div>
 </main>
