update to projects page

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -11,43 +11,43 @@
     <p class="lead text-center mb-5">Built with JavaScript, html, Scss, Express, and Node</p>
     <div class="row text-center">
         <div class="col-lg-3 hover mb-3">
-            <a href="#!">
-                <img src="https://placehold.co/600x400" class="img-project-fluid" alt="example">
+            <a href="https://ambafarmersvoice-f65a13837578.herokuapp.com/" target="_blank">
+                <img src="/assets/afv.png" class="img-project-fluid rounded shadow-lg" alt="example">
             </a>
         </div>
         <div class="col-lg-3 hover mb-3">
-            <a href="#!">
-                <img src="https://placehold.co/600x400" class="img-project-fluid" alt="example">
+            <a href="https://young-men-of-distinction-4f0bc97b0c3f.herokuapp.com/" target="_blank">
+                <img src="/assets/ymod.png" class="img-project-fluid rounded shadow-lg" alt="example">
             </a>
         </div>
         <div class="col-lg-3 hover mb-3">
-            <a href="#!">
-                <img src="https://placehold.co/600x400" class="img-project-fluid" alt="example">
+            <a href="https://www.cosmicvibesnj.com" target="_blank">
+                <img src="/assets/cosmicvibes.png" class="img-project-fluid rounded shadow-lg" alt="example">
             </a>
         </div>
         <div class="col-lg-3 hover mb-3">
-            <a href="#!">
-                <img src="https://placehold.co/600x400" class="img-project-fluid" alt="example">
+            <a href="https://dramacidepaws.com/" target="_blank">
+                <img src="/assets/dramacidekennel.png" class="img-project-fluid rounded shadow-lg" alt="example">
             </a>
         </div>
         <div class="col-lg-3 hover mb-3">
-            <a href="#!">
-                <img src="https://placehold.co/600x400" class="img-project-fluid" alt="example">
+            <a href="https://asl-online.netlify.app/" target="_blank">
+                <img src="/assets/asl.png" class="img-project-fluid rounded shadow-lg" alt="example">
             </a>
         </div>
         <div class="col-lg-3 hover mb-3">
-            <a href="#!">
-                <img src="https://placehold.co/600x400" class="img-project-fluid" alt="example">
+            <a href="https://northfolk-dental.netlify.app/" target="_blank">
+                <img src="/assets/dental.png" class="img-project-fluid rounded shadow-lg" alt="example">
             </a>
         </div>
         <div class="col-lg-3 hover mb-3">
-            <a href="#!">
-                <img src="https://placehold.co/600x400" class="img-project-fluid" alt="example">
+            <a href="https://coffee-supplier.netlify.app/" target="_blank">
+                <img src="/assets/coffeesupplier.png" class="img-project-fluid rounded shadow-lg" alt="example">
             </a>
         </div>
         <div class="col-lg-3 hover mb-3">
-            <a href="#!">
-                <img src="https://placehold.co/600x400" class="img-project-fluid" alt="example">
+            <a href="https://super-parfait-9210ca.netlify.app/" target="_blank">
+                <img src="/assets/ecommerce.png" class="img-project-fluid rounded shadow-lg" alt="example">
             </a>
         </div>
     </div>
